--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+  @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;500;600;700;800;900&family=Roboto:wght@300;400&display=swap');
+
+body {
+    font-family: 'Kumbh Sans', sans-serif;
+
+}
